--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +51,8 @@ dependencies:
   url_launcher: ^6.2.5
   permission_handler: ^11.3.0
   font_awesome_flutter: ^10.6.0
+  smooth_page_indicator: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
