--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 android {
     namespace = "com.example.flutter_application_1"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -20,20 +20,17 @@ android {
         jvmTarget = '17'
     }
 
-defaultConfig {
-    applicationId = "com.example.flutter_application_1"
-    minSdk = 23 // Aumente para 23
-    targetSdk = flutter.targetSdkVersion
-    versionCode = flutter.versionCode
-    versionName = flutter.versionName
-    multiDexEnabled = true
-}
-
+    defaultConfig {
+        applicationId = "com.example.flutter_application_1"
+        minSdk = 23
+        targetSdk = 33
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
+        multiDexEnabled = true
+    }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -46,4 +43,5 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-storage'
 }
